# DronixShop-Django

./: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
core/apps/common/: admin.py  exceptions.py  models.py
core/apps/shop/: admin.py  apps.py  models.py
core/apps/shop/entities/: categories.py  products.py
core/apps/shop/migrations/: 0001_initial.py
core/apps/shop/models/: categories.py  products.py
core/project/: urls.py
core/project/settings/: main.py
docker_compose/: app.yaml
