[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Lukash <89802614+AlexanderLukash@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
django = "^5.1.3"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
